--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "css-helpers-generators",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://retr0ville.github.io/css-gen/",
+  "homepage": "https://retr0ville.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
